@@ -14,14 +14,17 @@ VERSION_ENCA=1.13
 VERSION_EXPAT=2.1.0
 VERSION_FAAD2=2.7
 VERSION_FLAC=1.2.1
-VERSION_FONTCONFIG=2.8.0
+VERSION_FONTCONFIG=2.10.1
 VERSION_FFMPEG=n0.11.1
 VERSION_FREETYPE=2.4.10
 VERSION_FRIBIDI=0.19.2
 VERSION_GIFLIB=4.1.6
+VERSION_HARFBUZZ=0.9.4
 VERSION_ICONV=1.13.1
 VERSION_JPEG=8d
 VERSION_LAME=3.99.5
+# Automatically checking out latest stable version
+#VERSION_LIBASS=0.10.0
 VERSION_LIBBLURAY=0.2.2
 VERSION_LIBDCA=0.0.5
 VERSION_LIBDV=1.0.0
@@ -35,9 +38,9 @@ VERSION_LIBZEN=0.4.26
 VERSION_LZO=2.06
 VERSION_MPLAYER=35003
 VERSION_NCURSES=5.9
-VERSION_PS3MEDIASERVER=release-1.54.0
+VERSION_PS3MEDIASERVER=release-1.70.1
 VERSION_TSMUXER=1.10.6
-# compile latest stable x264
+# Automatically checking out latest stable version
 #VERSION_X264=r2200
 VERSION_XVID=1.3.2
 VERSION_ZLIB=1.2.7
