@@ -2,7 +2,7 @@
 #
 # download-pms-binaries-source.sh
 #
-# Version: 1.0
+# Version: 1.1
 # Last updated: 2012-01-26
 # Authors: Happy-Neko
 # Based on build-pms-binaries.sh by Patrick Atoon and Happy-Neko
@@ -280,6 +280,7 @@ download_ffmpeg() {
         $GIT checkout ${VERSION_FFMPEG}
         exit_on_error
     fi
+
     rm -rf ./.git
 }
 
@@ -360,6 +361,30 @@ download_giflib() {
 
 
 ##########################################
+# HARFBUZZ
+# http://www.freedesktop.org/wiki/Software/HarfBuzz
+#
+download_harfbuzz() {
+    start_download harfbuzz
+    cd $SRC
+
+    if [ -d harfbuzz ]; then
+        rm -rf harfbuzz
+    fi
+    $GIT clone git://anongit.freedesktop.org/harfbuzz harfbuzz
+    exit_on_error
+    cd harfbuzz
+
+    if [ "$FIXED_REVISIONS" == "yes" ]; then
+        $GIT checkout ${VERSION_HARFBUZZ}
+        exit_on_error
+    fi
+
+    rm -rf ./.git
+}
+
+
+##########################################
 # ICONV
 # http://www.gnu.org/software/libiconv/
 #
@@ -425,6 +450,7 @@ download_libbluray() {
         $GIT checkout ${VERSION_LIBBLURAY}
         exit_on_error
     fi
+
     rm -rf ./.git
 }
 
@@ -499,8 +525,8 @@ download_libpng() {
 
     if [ ! -f libpng-${VERSION_LIBPNG}.tar.gz ]; then
         # One of these two, depending on whether we use the latest release
-        #download http://downloads.sourceforge.net/project/libpng/libpng15/older-releases/${VERSION_LIBPNG}/libpng-${VERSION_LIBPNG}.tar.gz
-        download http://downloads.sourceforge.net/project/libpng/libpng15/${VERSION_LIBPNG}/libpng-${VERSION_LIBPNG}.tar.gz
+        download http://downloads.sourceforge.net/project/libpng/libpng15/older-releases/${VERSION_LIBPNG}/libpng-${VERSION_LIBPNG}.tar.gz
+        #download http://downloads.sourceforge.net/project/libpng/libpng15/${VERSION_LIBPNG}/libpng-${VERSION_LIBPNG}.tar.gz
         exit_on_error
     fi
 }
@@ -633,16 +659,18 @@ download_x264() {
     exit_on_error
     cd x264
 
+    # Automatically checking out the latest stable version
     #if [ "$FIXED_REVISIONS" == "yes" ]; then
     #    $GIT checkout ${VERSION_X264}
     #    exit_on_error
     #fi
+
     rm -rf ./.git
 }
 
 
 ##########################################
-# libass
+# LIBASS
 # http://code.google.com/p/libass/
 #
 download_libass() {
@@ -652,9 +680,17 @@ download_libass() {
     if [ -d libass ]; then
         rm -rf libass
     fi
-    $GIT clone https://code.google.com/p/libass/
+
+    $GIT clone https://code.google.com/p/libass/ -b stable
     exit_on_error
     cd libass
+
+    # Automatically checking out the latest stable version
+    #if [ "$FIXED_REVISIONS" == "yes" ]; then
+    #    $GIT checkout ${VERSION_LIBASS}
+    #    exit_on_error
+    #fi
+
     rm -rf ./.git
 }
 
@@ -784,10 +820,10 @@ download_expat
 download_faad2
 download_freetype
 download_iconv
-# Note: fontconfig requires freetype and iconv to build
 download_fontconfig
 download_fribidi
 download_giflib
+ownload_harfbuzz
 download_jpeg
 download_ncurses
 download_lame
@@ -796,7 +832,6 @@ download_libdca
 download_libdv
 download_libmad
 download_libzen
-# Note: libmediainfo requires libzen to build
 download_libmediainfo
 download_libpng
 download_libogg
@@ -806,7 +841,7 @@ download_lzo
 download_x264
 download_xvid
 
-# Build tools for including with PS3 Media Server
+# Tools for including with PS3 Media Server
 download_flac
 download_dcraw
 download_enca
