@@ -12,6 +12,7 @@ Changelog:
     Changed audio/subtitle defaults to accept anything
     Fixed possible error while loading iPhoto library (#1523)
     Fixed bug where disabled engines would be picked
+    Removed fontconfig from MEncoder for Mac OSX for improved subs compatibility 
 
 1.70.1 - 2012-08-31
 
